--- a/TASK1/index.html
+++ b/TASK1/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Content Management Tool</title>
+    <title>CONTENT MANAGEMENT TOOL</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Content Management Tool</h1>
+        <h1>CONTENT MANAGEMENT TOOL</h1>
     </header>
     <main>
         <div class="content">
-            <h2>Create New Content</h2>
+            <h2>CREATE NEW CONTENT</h2>
             <form id="contentForm">
                 <label for="title">Title:</label>
                 <input type="text" id="title" name="title" required>
@@ -22,7 +22,7 @@
             </form>
         </div>
         <div class="content">
-            <h2>Existing Content</h2>
+            <h2>EXISTING CONTENT</h2>
             <ul id="contentList">
                 <!-- Existing content will be displayed here -->
             </ul>
