--- a/TASK2/index.html
+++ b/TASK2/index.html
@@ -13,14 +13,14 @@
 
     <div class="container">
         <div class="task-list">
-            <h2>Task List</h2>
+            <h2>TASK LIST</h2>
             <ul id="task-list">
                 <!-- Tasks will be dynamically added here -->
             </ul>
         </div>
 
         <div class="user-list">
-            <h2>User List</h2>
+            <h2>USER LIST</h2>
             <ul id="user-list">
                 <!-- Users will be dynamically added here -->
             </ul>
